--- a/content/translation/polish.json
+++ b/content/translation/polish.json
@@ -12,4 +12,26 @@
     "skill.core.learning.description.basic": "{Podstawowa Nauka}\r\n\r\n{Zwiększa liczbę punktów doświadczenia otrzymywanych przez bohatera o 10%.",
     "skill.core.learning.description.advanced": "{Zaawansowana Nauka}\r\n\r\n{Zwiększa liczbę punktów doświadczenia otrzymywanych przez bohatera o 20%. Wiedza bohatera jest zwiększona o 1.",
     "skill.core.learning.description.expert": "{Mistrzowska Nauka}\r\n\r\n{Zwiększa liczbę punktów doświadczenia otrzymywanych przez bohatera o 30%. Wiedza bohatera jest zwiększona o 2.",
+    "hero.pvp-balance.heroes.seymour2k.biography" : "Seymour był wielokrotnie mylony z Kastore ze względu na swój wygląd i fakt, że ma dostęp do przenośnego replikatora. Dzięki niemu jest w stanie dostarczać posiłki poza zbrojownie niebiańskiej Kuźni.",
+	"hero.pvp-balance.heroes.seymour2k.name" : "Seymour",
+	"hero.pvp-balance.heroes.seymour2k.specialty.description" : "{Kuźnia}\r\n\r\nMoże ulepszyć gobliny, hobgobliny, żywe trupy, zombie, gogi i magogi do stworzeń kuźni t1 - t3.",
+	"hero.pvp-balance.heroes.seymour2k.specialty.name" : "Kuźnia",
+	"hero.pvp-balance.heroes.seymour2k.specialty.tooltip" : "Bonus: Ulepszenie bohatera",
+	"mapObject.pvp-balance.jebusobjects.ancientLampNew.ancientLamp.name" : "Starożytna Lampa (pozwala na jednorazową rekrutację 4-7 Wielkich Dżinów)",
+	"mapObject.pvp-balance.jebusobjects.ancientLampNew.ancientLamp.onEmpty" : "{Starożytna Lampa}\r\n\r\nZniszczony turban wyłania się z lampy umieszczonej na głowie jego właściciela – dżina. \"Och, czyż to nie są jacyś pracownicy. Znowu. Masz pieniądze? Nie będziemy znowu pracować za magiczne fasolki. I NIE spełnimy żadnych życzeń. Wróć, kiedy znajdziesz trochę złota na zbyciu.\"",
+	"mapObject.pvp-balance.jebusobjects.ancientLampNew.ancientLamp.rewards.0" : "{Starożytna Lampa}\r\n\r\nZniszczony turban wyłania się z lampy umieszczonej na głowie jego właściciela – dżina. \"Och, czyż to nie są jacyś pracownicy. Znowu. Masz pieniądze? Nie będziemy znowu pracować za magiczne fasolki. I NIE spełnimy żadnych życzeń. Wróć, kiedy znajdziesz trochę złota na zbyciu.\"",
+	"mapObject.pvp-balance.jebusobjects.ancientLampNew.ancientLamp.rewards.1" : "{Starożytna Lampa}\r\n\r\nZniszczony turban wyłania się z lampy umieszczonej na głowie jego właściciela – dżina. \"Och, czyż to nie są jacyś pracownicy. Znowu. Masz pieniądze? Nie będziemy znowu pracować za magiczne fasolki. I NIE spełnimy żadnych życzeń. Wróć, kiedy znajdziesz trochę złota na zbyciu.\"",
+	"mapObject.pvp-balance.jebusobjects.ancientLampNew.ancientLamp.rewards.2" : "{Starożytna Lampa}\r\n\r\nZniszczony turban wyłania się z lampy umieszczonej na głowie jego właściciela – dżina. \"Och, czyż to nie są jacyś pracownicy. Znowu. Masz pieniądze? Nie będziemy znowu pracować za magiczne fasolki. I NIE spełnimy żadnych życzeń. Wróć, kiedy znajdziesz trochę złota na zbyciu.\"",
+	"mapObject.pvp-balance.jebusobjects.ancientLampNew.ancientLamp.rewards.3" : "{Starożytna Lampa}\r\n\r\nZniszczony turban wyłania się z lampy umieszczonej na głowie jego właściciela – dżina. \"Och, czyż to nie są jacyś pracownicy. Znowu. Masz pieniądze? Nie będziemy znowu pracować za magiczne fasolki. I NIE spełnimy żadnych życzeń. Wróć, kiedy znajdziesz trochę złota na zbyciu.\"",
+	"mapObject.pvp-balance.jebusobjects.creatureBank.demonDomain.name" : "Domena Demonów",
+	"mapObject.pvp-balance.jebusobjects.creatureBank.dragonUtopiaBiom.name" : "Smocza Utopia",
+	"mapObject.pvp-balance.jebusobjects.creatureBank.dragonUtopiaSand.name" : "Smocza Utopia",
+	"mapObject.pvp-balance.jebusobjects.creatureBank.newCrypt.name" : "Krypta",
+	"mapObject.pvp-balance.jebusobjects.creatureBank.turboUtopia.name" : "Złota Utopia",
+	"mapObject.pvp-balance.objects.gazebo.gazebo.name" : "Altana (+2000 doświadczenia za 1000 złota, raz na bohatera)",
+	"mapObject.pvp-balance.objects.gazebo.gazebo.onEmpty" : "{Altana}\r\n\r\nStary Rycerz pojawia się na schodach altany. „Nauczę cię wszystkiego, co wiem, aby pomóc ci w twoich podróżach. Jednak dam ci znać, że wymagana jest mała darowizna na rzecz Ligi Emerytowanych Rycerzy. Wróć, gdy uzbierasz tysiąc sztuk złota.\"",
+	"mapObject.pvp-balance.objects.gazebo.gazebo.onVisited" : "{Altana}\r\n\r\nSłychać głośne chrapanie dochodzące z altany. Najwyraźniej Liga już dobrze wykorzystała twoją darowiznę.",
+	"mapObject.pvp-balance.objects.gazebo.gazebo.rewards.0" : "{Altana}\r\n\r\nI stary Rycerz pojawia się na schodach altany. „Nauczę cię wszystkiego, co wiem, aby pomóc ci w twoich podróżach. Jednak dam ci znać, że wymagana jest mała darowizna na rzecz Ligi Emerytowanych Rycerzy. Tysiąc sztuk złota wystarczy.\"",
+	"object.pvp-balance.jebusobjects.ancientLampNew.name" : "Starożytna Lampa",
+	"object.pvp-balance.objects.gazebo.name" : "Altana"
 }
