--- a/content/translation/russian.json
+++ b/content/translation/russian.json
@@ -11,6 +11,17 @@
     "skill.core.learning.description.basic": "{Фундаментальная наука}\r\n\r\n{Увеличивает количество получаемых героем очков опыта на 10%.",
     "skill.core.learning.description.advanced": "{Продвинутое обучение}\r\n\r\n{Увеличивает количество получаемых героем очков опыта на 20%. Знания героя увеличиваются на 1.",
     "skill.core.learning.description.expert": "{Магистр наук}\r\n\r\n{Увеличивает количество получаемых героем очков опыта на 30%. Знания героя увеличиваются на 2.",
+    "hero.pvp-balance.heroes.seymour2k.biography" : "Сеймура много раз принимали за Кастора из-за его внешности и того факта, что у него есть доступ к портативному репликатору. Благодаря последнему он может снаряжать подкрепления за пределами арсеналов Небесной Кузницы.",
+	"hero.pvp-balance.heroes.seymour2k.name" : "Сеймура",
+	"hero.pvp-balance.heroes.seymour2k.specialty.description" : "{Кузница}\r\n\r\nМожно улучшать гоблинов, хобгоблинов, живых мертвецов, зомби, гогов и магогов, чтобы создавать существ 1–3 уровня.",
+	"hero.pvp-balance.heroes.seymour2k.specialty.name" : "Кузница",
+	"hero.pvp-balance.heroes.seymour2k.specialty.tooltip" : "Бонус: улучшение героя.",
+	"mapObject.pvp-balance.jebusobjects.ancientLampNew.ancientLamp.name" : "Древняя лампа (позволяет вам нанимать 4-7 Великих Джиннов одновременно)",
+	"mapObject.pvp-balance.jebusobjects.ancientLampNew.ancientLamp.onEmpty" : "{Древняя лампа}\r\n\r\nРазрушенный тюрбан вылезает из лампы, возложенной на голову его владельца - джинна. \"О, разве это не сотрудники? Снова. У вас есть деньги? Мы больше не будем работать за волшебные бобы. И мы НЕ исполняем никакие желания. Возвращайтесь, когда найдете золото на продажу.\"",
+	"mapObject.pvp-balance.jebusobjects.ancientLampNew.ancientLamp.rewards.0" : "{Древняя лампа}\r\n\r\nРазрушенный тюрбан вылезает из лампы, возложенной на голову его владельца - джинна. \"О, разве это не сотрудники? Снова. У вас есть деньги? Мы больше не будем работать за волшебные бобы. И мы НЕ исполняем никакие желания. Возвращайтесь, когда найдете золото на продажу.\"",
+	"mapObject.pvp-balance.jebusobjects.ancientLampNew.ancientLamp.rewards.1" : "{Древняя лампа}\r\n\r\nРазрушенный тюрбан вылезает из лампы, возложенной на голову его владельца - джинна. \"О, разве это не сотрудники? Снова. У вас есть деньги? Мы больше не будем работать за волшебные бобы. И мы НЕ исполняем никакие желания. Возвращайтесь, когда найдете золото на продажу.\"",
+	"mapObject.pvp-balance.jebusobjects.ancientLampNew.ancientLamp.rewards.2" : "{Древняя лампа}\r\n\r\nРазрушенный тюрбан вылезает из лампы, возложенной на голову его владельца - джинна. \"О, разве это не сотрудники? Снова. У вас есть деньги? Мы больше не будем работать за волшебные бобы. И мы НЕ исполняем никакие желания. Возвращайтесь, когда найдете золото на продажу.\"",
+	"mapObject.pvp-balance.jebusobjects.ancientLampNew.ancientLamp.rewards.3" : "{Древняя лампа}\r\n\r\nРазрушенный тюрбан вылезает из лампы, возложенной на голову его владельца - джинна. \"О, разве это не сотрудники? Снова. У вас есть деньги? Мы больше не будем работать за волшебные бобы. И мы НЕ исполняем никакие желания. Возвращайтесь, когда найдете золото на продажу.\"",
     "mapObject.pvp-balance.jebusobjects.creatureBank.newCrypt.name": "Крипта",
     "mapObject.pvp-balance.jebusobjects.creatureBank.demonDomain.name": "Домен демонов",
     "mapObject.pvp-balance.jebusobjects.dragonUtopia.dragonUtopia.name": "Утопия драконов",
@@ -18,8 +29,17 @@
     "mapObject.pvp-balance.jebusobjects.creatureBank.dragonUtopiaSand.name": "Утопия драконов",
     "mapObject.pvp-balance.jebusobjects.creatureBank.dunesSnakeTemple.name": "Змеиная гробница",
     "mapObject.pvp-balance.jebusobjects.creatureBank.turboUtopia.name": "Золотая утопия",
-    "mapObject.pvp-balance.gazebo.gazebo.name": "Беседка",
-    "mapObject.pvp-balance.gazebo.name": "Беседка",
-    "mapObject.pvp-balance.gazebo.gazebo.onVisitedMessage": "{Беседка}\r\n\r\nИз беседки доносится громкий храп. Судя по всему, Лига уже использовала ваше пожертвование с пользой.",
-    "mapObject.pvp-balance.gazebo.gazebo.onEmptyMessage": "{Беседка}\r\n\r\nНа ступеньках беседки появляется старый рыцарь. Я научу вас всему, что знаю, чтобы помочь вам в ваших путешествиях. Однако я сообщу вам, что требуется небольшое пожертвование в пользу Лиги отставных рыцарей. Возвращайся, когда насобираешь тысячу золотых.",
+    "mapObject.pvp-balance.objects.gazebo.gazebo.name" : "Беседка (+2000 опыта за 1000 золота один раз за героя)",
+	"mapObject.pvp-balance.objects.gazebo.gazebo.onEmpty" : "{Беседка}\r\n\r\nНа ступеньках беседки появляется Старый Рыцарь. «Я научу тебя всему, что знаю, чтобы помочь тебе в твоих путешествиях. Однако я сообщу вам, что требуется небольшое пожертвование Лиге рыцарей-пенсионеров. Возвращайся, когда соберешь тысячу золотых.\"",
+	"mapObject.pvp-balance.objects.gazebo.gazebo.onVisited" : "{Беседка}\r\n\r\nИз беседки доносится громкий храп. Судя по всему, Лига уже использовала ваше пожертвование с пользой.",
+	"mapObject.pvp-balance.objects.gazebo.gazebo.rewards.0" : "{Беседка}\r\n\r\nИ на ступеньках беседки появляется старый Рыцарь. «Я научу тебя всему, что знаю, чтобы помочь тебе в твоих путешествиях. Однако я сообщу вам, что требуется небольшое пожертвование Лиге рыцарей-пенсионеров. Тысячи золотых монет достаточно.\"",
+    "object.pvp-balance.jebusobjects.ancientLampNew.name" : "Древняя лампа",
+	"object.pvp-balance.objects.gazebo.name" : "Беседка",
+    "hero.forge2k.charity2k.specialty.description" : "{Магический талант}\r\n\r\nЗаклинания, произнесенные героем, наносят врагам на 5% больше урона",
+	"hero.forge2k.cistrict2k.specialty.description" : "{Нарушение}\r\n\r\nВо время боя снижает магическую силу вражеского героя еще на 5%.",
+	"hero.forge2k.cistrict2k.specialty.name" : "Нарушение",
+	"hero.forge2k.cistrict2k.specialty.tooltip" : "Бонус вторичного навыка: Разрушение",
+	"hero.forge2k.deckard2k.specialty.description" : "{Оружейник}\r\n\r\nУменьшает урон, наносимый вашим войскам во время боя, еще на 5%.",
+	"hero.forge2k.everest2k.specialty.description" : "{Мистицизм}\r\n\r\nПолучает бонус 5% к навыку «Мистицизм» за каждый уровень опыта.",
+	"hero.forge2k.sheikleen2k.specialty.description" : "{Интеллект}\r\n\r\nПолучает бонус 5% к навыку Интеллект за каждый уровень опыта."
 }
